# winsparkle

./: CMakeLists.txt  WinSparkleConfig.cmake.in  appveyor.yml
include/: winsparkle.h
src/: dllmain.cpp  ui.cpp
